--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Waifu Quiz</title>
 </head>
 <body>
     <div class="topnav flex"style="margin:0px;">
         <div class="leftGroup">
-            <div class="title">Waifu Quiz</div>
+            <div class="title">Waifu Quiz 1.0.1</div>
         </div>
         <div class="rightGroup">
             <button class="button red"id="reset" onclick="location.reload()">Reset</button>
